Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P4: Low
-
Resolution: Done
-
Affects Version/s: 5.15.2
-
Fix Version/s: 6.4.0 RC1
-
Component/s: Quick: Core Declarative QML
-
Labels:
-
Commits:2118b7eb42 (qt/qtdeclarative/6.4) 7e6db64d43 (qt/qtdeclarative/dev) 2118b7eb42 (qt/tqtc-qtdeclarative/6.4) 7e6db64d43 (qt/tqtc-qtdeclarative/dev)
Description
Issue
// Works: Text is rendered as rich text
TextEdit {
id: te1
textFormat: TextEdit.RichText
Component.onCompleted: te1.insert(te1.length, "<b>Hello</b> World")
}
// Does not work: Text is rendered as literal plaintext
TextEdit {
id: te2
textFormat: TextEdit.MarkdownText
Component.onCompleted: te2.insert(te2.length, "# Hello\n\nWorld")
}
Workaround
Instead of calling insert(), use
te2.text = te2.text + "# Hello\n\nWorld"
Attachments
Issue Links
- relates to
-
QTBUG-81060 Empty line (\n) at the top of QTextEdit and QLabel when using markdown
-
- Closed
-
-
QTBUG-76105 add QTextDocumentFragment and clipboard Markdown support
-
- In Progress
-