Deal with markdown fragments in TextEdit

- as with rich text, append() and insert() assume that if the text
  is already markdown, the text to be inserted is too
- as with rich text, text() and getFormattedText() return text with
  markdown formatting, whereas getText() and selectedText() convert it
  to plain text
- Component.onCompleted markdown initialization is ok
- pasting HTML from the clipboard preserves its formatting, and
  text() and getFormattedText() return text with markdown formatting
- selectAll() and copy() make HTML available on the system clipboard

We're beginning to use the goodies from qtbase
7c7606460403e6495b860134f28e8d4d45c6c810

[ChangeLog][QtQuick][TextEdit] TextEdit.insert(), append(), copy(),
paste() etc. are now working with MarkdownText.

Done-with: Ivan Solovev
Fixes: QTBUG-94462
Task-number: QTBUG-76105
Change-Id: I01049c769e0e9bfccaf96bf90cb2fcc066276e7c
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 7e6db64d4370ee2bf30572aebf1905729cf594dc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>